Mon Dec 29 18:08:00 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/fakepoll.c: fix typo in comment

Sat Dec 27 16:47:40 EST 2008	JK Lowden <jklowden@freetds.org>
	* src/replacements/fakepoll.c src/replacements/fakepoll.h
	- different approach to Win32 compatibility

Fri Dec 26 13:20:39 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: cleanup

Mon Dec 22 16:32:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: use strtok_r instead of strtok

Sat Dec 20 20:30:47 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: remove warning

Sat Dec 20 20:16:20 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: fix quite impossible memory leak

Sat Dec 20 20:13:33 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/commit: fix small problem with small comments

Sat Dec 20 20:11:46 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/fakepoll.c: fix win32 portability issue

Sat Dec 20 00:52:51 EST 2008	JK Lowden <jklowden@freetds.org>
	* src/tds/login.c src/tds/mem.c src/tds/net.c
	- initialize tds_login at allocation, not connection
	* configure.ac include/Makefile.am 
	- sort header files for readability
	* doc/userguide.dsl.in HTML 4.0 strict output
	* doc/userguide.sgml minor updates
	* src/replacements/Makefile.am 
	* src/replacements/fakepoll.h src/replacements/fakepoll.c
	- added fakepoll

Fri Dec 19 20:22:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/commit:
	- fix date language problem
	- multiple comments support

Fri Dec 19 19:43:07 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/bulk.c: fix possible issue with 64 bit machines

Fri Dec 19 17:22:14 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- fix typo, process last empty field from sql browser

Fri Dec 19 16:40:53 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/bulk.c: